--- a/assets/header.sass
+++ b/assets/header.sass
@@ -2,7 +2,7 @@ header
   width: 1440px
   height: 72px
   margin: 0 auto
-  background-color: $background-color__1
+  background-color: $background-color__primary
   display: flex
   align-items: center
   justify-content: center
