--- a/assets/variables.sass
+++ b/assets/variables.sass
@@ -1,3 +1,9 @@
 $background-color__primary: #5a82e8
+$background-color__secondary: #ffffff
 $text-color__primary: #53eaf0
 $text-color__secondary: #ffffff
+$button-text-color: #3C6FE4
+$button-border: 1px solid white
+$button-border__radius: 10px
+$button-border__padding: 16px 20px
+$text-decoration: none
