--- a/assets/mixins.sass
+++ b/assets/mixins.sass
@@ -5,3 +5,9 @@
 @mixin font-size($font-size:16px, $font-weight:400)
   font-size: $font-size
   font-weight: $font-weight
+
+@mixin background
+  background: $background-color__primary
+  background-image: url("/assets/img/rectangle-1.png"), url("/assets/img/rectangle-2.png")
+  background-repeat: no-repeat
+  background-position: bottom left, bottom right
