--- a/assets/mixins.sass
+++ b/assets/mixins.sass
@@ -8,6 +8,6 @@
 
 @mixin background
   background: $background-color__primary
-  background-image: url("/assets/img/rectangle-1.png"), url("/assets/img/rectangle-2.png")
+  background-image: url("/assets/img/background-img-left.png"), url("/assets/img/background-img-right.png")
   background-repeat: no-repeat
   background-position: bottom left, bottom right
