--- a/assets/variables.sass
+++ b/assets/variables.sass
@@ -1,9 +1,14 @@
 $background-color__primary: #5a82e8
 $background-color__secondary: #ffffff
+$background-color__third: #486edc
 $text-color__primary: #53eaf0
 $text-color__secondary: #ffffff
+$text-color__third: #486edc
 $button-text-color: #3C6FE4
-$button-border: 1px solid white
-$button-border__radius: 10px
+$border__primary: 1px solid red
+$border-radius__primary: 12px
+$border-radius__secondary: 24px
+$border-radius__slider: 16px
 $button-border__padding: 16px 20px
+$slider__padding: 16px
 $text-decoration: none
