added slider blocks (evening lesson)

--- a/assets/variables.sass
+++ b/assets/variables.sass
@@ -5,7 +5,7 @@ $text-color__primary: #53eaf0
 $text-color__secondary: #ffffff
 $text-color__third: #486edc
 $button-text-color: #3C6FE4
-$border__primary: 1px solid red
+$border__primary: 1px solid white
 $border-radius__primary: 12px
 $border-radius__secondary: 24px
 $border-radius__slider: 16px
