--- a/assets/variables.sass
+++ b/assets/variables.sass
@@ -1,6 +1,7 @@
 $background-color__primary: #5a82e8
 $background-color__secondary: #ffffff
 $background-color__third: #486edc
+$background-color__fourth: #eaf0ff
 $text-color__primary: #53eaf0
 $text-color__secondary: #ffffff
 $text-color__third: #486edc
