--- a/assets/mixins.sass
+++ b/assets/mixins.sass
@@ -8,9 +8,9 @@
 
 @mixin background__primary
   background: $background-color__primary
-  background-image: url("/assets/img/background-img-left.png"), url("/assets/img/background-img-right.png")
+  background-image: url("/assets/img/background-img-left.png"), url("/assets/img/hand-phone-img.png"), url("/assets/img/background-img-right.png")
   background-repeat: no-repeat
-  background-position: bottom left, bottom right
+  background-position: bottom left, 865px bottom, bottom right
 
 @mixin background__secondary
   background: $background-color__fourth
