--- a/assets/body.sass
+++ b/assets/body.sass
@@ -10,213 +10,7 @@ body
   .container
     margin: 0 auto
     width: 1440px
-
-    .banners-wrap
-      position: relative
-
-      .upper-banner
-        @include background__primary
-        padding-top: 93px
-        height: 806px
-
-        .banner-info
-          display: flex
-          flex-direction: column
-          align-items: center
-
-          .app-text
-            @include font-size(12px)
-            color: $text-color__primary
-            text-transform: uppercase
-
-          .site-link
-            @include font-size(96px, 800)
-            @include font('Circe')
-            line-height: 1.2
-            color: $text-color__secondary
-
-            &__postfix
-              color: $text-color__primary
-
-          .app-description
-            color: $text-color__secondary
-            @include font-size(24px)
-            @include font('Circe')
-            width: 439px
-            text-align: center
-            margin-bottom: 44px
-
-          .main-buttons
-            display: flex
-            gap: 12px
-
-            &__primary, &__secondary
-              border: $border__primary
-              padding: $button-border__padding
-              border-radius: $border-radius__primary
-              text-decoration: $text-decoration
-              @include font('Circe')
-
-            &__primary
-              color: $button-text-color
-              background-color: $background-color__secondary
-              @include font-size(20px, 700)
-
-            &__secondary
-              color: $text-color__secondary
-              @include font-size(20px)
-
-      .text-banner-img
-        position: absolute
-        margin: auto
-        top: 0
-        right: 0
-        bottom: 158px
-        left: 0
-
-      .text-banner
-        height: 839px
-        background-color: $background-color__third
-        padding-top: 279px
-
-        &-header
-          @include font-size(12px)
-          text-transform: uppercase
-          color: $text-color__primary
-          text-align: center
-          margin-bottom: 12px
-
-        &-content
-          @include font('Circe')
-          @include font-size(32px)
-          color: $text-color__secondary
-          text-align: center
-          width: 838px
-          margin: 0 auto 72px
-
-          &__style
-            @include font-size(32px, 700)
-            color: $text-color__primary
-
-        &-info
-          display: flex
-          justify-content: center
-          gap: 40px
-
-          .content-box
-            padding: 24px
-            border: $border__primary
-            border-radius: $border-radius__secondary
-            color: $text-color__secondary
-            @include font('Circe')
-            @include font-size(24px)
-
-            &__header
-              @include font-size(24px, 700)
-              display: flex
-              gap: 11px
-              margin-bottom: 24px
-
-            &-img__first
-              margin-top: -7px
-
-            &-img__second
-              margin-top: -4px
-
-            &__text
-              max-width: 335px
-
-      .arrow-img
-        display: block
-        margin: 24px auto 0
-
-    .client-info
-      width: 1440px
-      height: 698px
-      padding-top: 96px
-
-      &-solves
-        color: $text-color__third
-        margin-bottom: 24px
-
-        .our-clients
-          @include font-size(12px, 600)
-          text-transform: uppercase
-
-        .our-solves
-          @include font('Circe')
-          @include font-size(40px, 800)
-
-      .client-problems
-        @include font('Circe')
-        @include font-size(24px)
-        max-width: 461px
-        margin-bottom: 53px
-
-      .slider-wrap
-        display: flex
-        gap: 25px
-        overflow-x: scroll
-
-        .slider
-          @include font('Circe')
-          padding: $slider__padding
-          border: $border__primary
-          border-radius: $border-radius__slider
-          width: 300px
-          height: 320px
-          flex-shrink: 0
-          display: flex
-          flex-direction: column
-          align-items: flex-start
-          justify-content: space-between
-          color: $text-color__secondary
-
-          &__title
-            @include font-size(24px, 700)
-            text-transform: uppercase
-            margin-bottom: 4px
-
-          &__description
-            margin: 0 0 24px 0
-            line-height: 1.5
-
-          &__link
-            display: block
-            width: 100%
-            text-decoration: none
-            border: $border-_primary
-            color: $text-color__secondary
-            font-size: 14px
-            text-align: center
-            border-radius: 12px
-            padding: 12px 0
-
-
-          &_motul
-            background-color: #f57070
-
-          &_liqui
-            background-color: #486edc
-
-          &_sika
-            background-color: #f5bc4e
-
-          &_knauf
-            background-color: #5ab5e8
-
-          &_empty
-            background-color: #efefef
-
-    .app-personalisation
-      @include background__secondary
-      height: 689px
-
-      &-wrap
-        margin-right: 120px
-        display: flex
-        justify-content: right
-        align-items: center
-
-        .app-personalisation-content
-          width: 515px
+    @import "blocks/upper-banner"
+    @import "blocks/text-banner"
+    @import "blocks/client-info"
+    @import "blocks/app-personalisation"
