--- a/assets/variables.sass
+++ b/assets/variables.sass
@@ -5,8 +5,10 @@ $background-color__fourth: #eaf0ff
 $text-color__primary: #53eaf0
 $text-color__secondary: #ffffff
 $text-color__third: #486edc
+$text-color__fourth: #585a6c
 $button-text-color: #3C6FE4
 $border__primary: 1px solid white
+$border__secondary: 1px solid #486edc
 $border-radius__primary: 12px
 $border-radius__secondary: 24px
 $border-radius__slider: 16px
