--- a/assets/blocks/upper-banner.sass
+++ b/assets/blocks/upper-banner.sass
@@ -1,5 +1,8 @@
 .upper-banner
-  @include background__primary
+  background: $background-color__primary
+  background-image: url("/assets/img/background-img-left.png"), url("/assets/img/hand-phone-img.png"), url("/assets/img/background-img-right.png")
+  background-repeat: no-repeat
+  background-position: bottom left, 865px bottom, bottom right
   padding-left: 128px
   height: 698px
 
@@ -8,11 +11,6 @@
     flex-direction: column
     align-items: start
     padding-top: 165px
-
-    .app-text
-      @include font-size(12px)
-      color: $text-color__primary
-      text-transform: uppercase
 
     .site-link
       @include font-size(96px, 800)
