--- a/assets/body.sass
+++ b/assets/body.sass
@@ -3,9 +3,26 @@
 *
   box-sizing: border-box
 
+p
+  margin: 0
+
 body
   margin: 0
   @include font
+
+  .subheader
+    @include font-size(12px)
+    color: $text-color__primary
+    text-transform: uppercase
+
+  .subheader-color
+    color: $text-color__third
+
+  .headers-color
+    color: $text-color__third
+
+  .text-content-color
+    color: $text-color__fourth
 
   .container
     margin: 0 auto
@@ -14,3 +31,4 @@ body
     @import "blocks/text-banner"
     @import "blocks/client-info"
     @import "blocks/app-personalisation"
+    @import "blocks/app-info"
