--- a/assets/blocks/upper-banner.sass
+++ b/assets/blocks/upper-banner.sass
@@ -1,8 +1,8 @@
 .upper-banner
   background: $background-color__primary
-  background-image: url("/assets/img/background-img-left.png"), url("/assets/img/hand-phone-img.png"), url("/assets/img/background-img-right.png")
+  background-image: url("/assets/img/background-img-left.png"), url("/assets/img/hand-phone-first.png"), url("/assets/img/background-img-right.png"), url("/assets/img/big-ellipse.png"), url("/assets/img/small-ellipse.png")
   background-repeat: no-repeat
-  background-position: bottom left, 865px bottom, bottom right
+  background-position: bottom left, 486px 0, bottom right, 690px 354px, 1109px 92px
   padding-left: 128px
   height: 698px
 
