--- a/assets/variables.sass
+++ b/assets/variables.sass
@@ -12,6 +12,7 @@ $border__secondary: 1px solid #486edc
 $border-radius__primary: 12px
 $border-radius__secondary: 24px
 $border-radius__slider: 16px
+$border-opacity: 0.2
 $button-border__padding: 16px 20px
 $slider__padding: 16px
 $text-decoration: none
