--- a/assets/blocks/app-info.sass
+++ b/assets/blocks/app-info.sass
@@ -1,12 +1,31 @@
 .app-info
-  @include background__primary
+  background: $background-color__primary
+  background-image: url("/assets/img/background-img-left.png"), url("/assets/img/background-img-right.png"), url("/assets/img/phone.png")
+  background-repeat: no-repeat
+  background-position: bottom left, bottom right, center 211px
   height: 689px
   padding-top: 72px
 
   &-wrap
     text-align: center
+    margin-bottom: 119px
 
     &__header
       @include font('Circe')
       @include font-size(40px, 800)
       color: $text-color__secondary
+
+  .content-wrap
+    display: flex
+    justify-content: space-between
+
+    .content-left
+      display: flex
+      flex-direction: column
+      align-items: flex-end
+      text-align: right
+      margin-left: 108px
+      max-width: 398px
+
+    .content-right
+      margin-right: 91px
