--- a/assets/blocks/text-banner.sass
+++ b/assets/blocks/text-banner.sass
@@ -1,5 +1,5 @@
 .text-banner
-  height: 839px
+  height: 713px
   background-color: $background-color__third
   padding-top: 96px
 
@@ -26,9 +26,11 @@
   &-info
     display: flex
     justify-content: center
-    gap: 40px
+    gap: 18px
+    margin-bottom: 64px
 
     .content-box
+      position: relative
       padding: 24px
       border: $border__primary
       border-radius: $border-radius__secondary
@@ -36,17 +38,26 @@
       @include font('Circe')
       @include font-size(24px)
 
+      &__arrow
+        position: absolute
+        transform: translateX(288px) translateY(-56px)
+
       &__header
         @include font-size(24px, 700)
         display: flex
         gap: 11px
         margin-bottom: 24px
 
-      &-img__first
-        margin-top: -7px
-
-      &-img__second
+      &-img
         margin-top: -4px
 
       &__text
         max-width: 335px
+
+  .prize-fond
+    display: flex
+    align-items: center
+    justify-content: center
+    color: $text-color__primary
+    @include font('Circe')
+    @include font-size(24px, 700)
