--- a/assets/blocks/upper-banner.sass
+++ b/assets/blocks/upper-banner.sass
@@ -9,7 +9,7 @@
   .banner-info
     display: flex
     flex-direction: column
-    align-items: start
+    align-items: flex-start
     padding-top: 165px
 
     .site-link
