--- a/assets/body.sass
+++ b/assets/body.sass
@@ -10,6 +10,12 @@ body
   margin: 0
   @include font
 
+  .slider-wrap
+    display: flex
+    gap: 25px
+    overflow-x: scroll
+
+
   .content-header
     @include font('Circe')
     @include font-size(24px, 700)
