--- a/assets/blocks/additional.sass
+++ b/assets/blocks/additional.sass
@@ -48,8 +48,8 @@
 
     .slider__secondary-img
       position: absolute
-      display: inline-block
       left: 0
       right: 0
       margin: 0 auto
       bottom: 180px
+      width: auto
