--- a/assets/body.sass
+++ b/assets/body.sass
@@ -10,12 +10,6 @@ body
   margin: 0
   @include font
 
-  .slider-wrap
-    display: flex
-    gap: 25px
-    overflow-x: scroll
-
-
   .content-header
     @include font('Circe')
     @include font-size(24px, 700)
@@ -63,3 +57,7 @@ body
     @import "blocks/control-panel"
     @import "blocks/integration"
     @import "blocks/additional"
+    @import "blocks/money"
+    @import "blocks/app-cost"
+    @import "blocks/our-team"
+    @import "blocks/questions"
