--- a/assets/blocks/client-info.sass
+++ b/assets/blocks/client-info.sass
@@ -3,6 +3,8 @@
   padding-top: 96px
 
   &-solves
+    margin-left: 128px
+
     .our-clients
       @include font-size(12px, 600)
       text-transform: uppercase
@@ -10,7 +12,7 @@
     .our-solves
       @include font('Circe')
       @include font-size(40px, 800)
-      padding-bottom: 64px
+      margin-bottom: 64px
 
   .slider__primary
     @include font('Circe')
