--- a/assets/body.sass
+++ b/assets/body.sass
@@ -10,6 +10,13 @@ body
   margin: 0
   @include font
 
+  .color-wrapper
+    color: $text-color__primary
+    font-weight: 700
+
+  .uppercase
+    text-transform: uppercase
+
   .content-header
     @include font('Circe')
     @include font-size(24px, 700)
