--- a/assets/blocks/app-cost.sass
+++ b/assets/blocks/app-cost.sass
@@ -1,3 +1,36 @@
 .app-cost
   height: 680px
   background-color: #6397f8
+  background-image: url("/assets/img/hand.png")
+  background-repeat: no-repeat
+  background-position: 375px 127px
+  color: $text-color__secondary
+  @include font('Circe')
+  @include font-size(24px)
+  text-align: center
+  padding-top: 140px
+  padding-left: 80px
+
+  &-header
+    @include font-size(54px, 800)
+
+  &-offer
+    @include font-size(16px)
+    padding-bottom: 35px
+
+  &-block
+    margin: 0 auto
+    padding: 24px
+    border: $border__primary
+    width: 559px
+    border-radius: 24px
+    text-align: left
+    display: flex
+    flex-direction: column
+    gap: 24px
+
+    &-header
+      font-weight: 700
+
+    &-additional
+      @include font-size(12px)
