--- a/assets/blocks/text-banner.sass
+++ b/assets/blocks/text-banner.sass
@@ -27,7 +27,7 @@
     display: flex
     justify-content: center
     gap: 18px
-    margin-bottom: 64px
+    margin-bottom: 9px
 
     .content-box
       position: relative
@@ -61,3 +61,7 @@
     color: $text-color__primary
     @include font('Circe')
     @include font-size(24px, 700)
+
+  .svg-arrow
+    display: flex
+    justify-content: center
